kubernetes/Сетевое взаимодействие в Kubernetes. Часть 2/service-net.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-backend
spec:
  selector:
    app: frontend-backend
  ports:
  - name: nginx-port
    protocol: TCP
    port: 9001
    targetPort: http-web-svc
  - name: multitool-port-http
    protocol: TCP
    port: 1180
    targetPort: http-port
  - name: multitool-port-https
    protocol: TCP
    port: 11443
    targetPort: https-port
  - name: multitool
    protocol: TCP
    port: 9002
    targetPort: x-port
