kubernetes/Сетевое взаимодействие в Kubernetes. Часть 2/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-ingress
spec:
  rules:
  - host: test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-backend
            port:
              number: 9001
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: frontend-backend
            port:
              number: 9002
